src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>CategoryID__c</fullName>
        <label>Category ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <type>Text</type>
        <length>15</length>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <label>Category</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>